--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li *ngFor="let todo of (todoItem | async)">
+  <li *ngFor="let todo of todos">
     <app-todo-item [todo]="todo"></app-todo-item>
   </li>
 </ul>
