Mise à jour de la liste lors d'un ajout/suppresion d'un Todo

--- a/src/app/todo-container/todo-container.component.html
+++ b/src/app/todo-container/todo-container.component.html
@@ -1,2 +1,2 @@
-<app-todo-form [todoItems]="todoItems"></app-todo-form>
-<app-todo-list [todoItems]="todoItems"></app-todo-list>
+<app-todo-form [todoItems]="todoItems" (updateEventEmitter)="refreshList()"></app-todo-form>
+<app-todo-list [todoItems]="todoItems" (updateEventEmitter)="refreshList()"></app-todo-list>
