--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,5 +1,5 @@
 <ul>
   <li *ngFor="let todo of (todoItems | async)">
-    <app-todo-item [todo]="todo"></app-todo-item>
+    <app-todo-item [todo]="todo" (deleteEventEmitter)="sendEventToParent()"></app-todo-item>
   </li>
 </ul>
